# DV_registeration_bot

./: pyproject.toml
data/: schema.sql  setup_db.py  test_database.db
etc/: .env  admins.json
src/: main.py  run_bot.py  run_webapp.py
src/app/handlers/: command_h.py  conversation_h.py  query_h.py
src/app/services/: db_helper.py
src/app/templates/: text_and_markup.py
src/app/utils/: config.py  helper.py
src/app/web_app/: flask_app.py  form.py
src/app/web_app/static/: app.js  payments.css  payments.js  registration.css  statistics.css  statistics.js  style.css  view_application.css
src/app/web_app/templates/: 500.html  index.html  invalid_access.html  payments.html  registration.html  statistics.html  success.html  view_application.html
